# FYP

./: Business_Case_Healthcare-HR_Bridge.md  CARELINK_DELIVERABLES_SUMMARY.md  CARELINK_LOGO_BRAND_GUIDE.md  CARELINK_LOGO_PROFESSIONAL_v2.md  CARELINK_VISUAL_BRAND_REFERENCE.md  Final_Report_Healthcare-HR_Bridge.md  Mercon research.docx  Project Delivery Time Line.xlsx  Requirements_Analysis_Healthcare-HR_Bridge.md  SYSTEM_BRANDING_AND_NAMING.md  Supervisor_Brief_Healthcare_HR_Bridge_2026-03-07.md  UseCase_Diagrams_And_Flows.md  effort_estimates_minutes_with_hours.xlsx  flowchart TD.mmd  product_backlog_sprint_zero.csv  product_backlog_sprint_zero.xls  project_timeline_gantt.xlsx  project_timeline_gantt_full.xlsx  sprint_0_product_backlog.xlsx  sprint_1_product_backlog.xlsx  sprint_2_product_backlog.xlsx  sprint_3_product_backlog.xlsx  sprint_4_product_backlog.xlsx
apps/ai-screening-service/: package-lock.json  package.json
apps/python-backend/: pyproject.toml
apps/python-backend/src/app/: main.py
apps/python-backend/src/app/api/: guest_chat.py
apps/python-backend/src/app/core/: config.py
apps/python-backend/src/app/models/: guest_chat.py
apps/python-backend/src/app/services/: guest_chat_service.py
apps/web-frontend/: index.html  (+2 more)
docs/: Product_Backlog_Complete_System.md  Product_Backlog_Complete_System_Excel.csv  Product_Backlog_Complete_System_Excel.xlsx  Results_and_Discussion_Section.md  copilot prompts.txt  guest-chat-flow.md  guest-profile-page-development.md
product_backlog_sprint_zero_files/: filelist.xml  sheet001.htm  stylesheet.css  tabstrip.htm
(+33 files in other folders)
