[project]
name = "carelink-python-backend"
version = "0.1.0"
description = "Python backend scaffold for CareLink guest chat and screening services."
requires-python = ">=3.11"
readme = "README.md"
packages = [ { include = "app" } ]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
serve = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8083"
